lib/snippet-body.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/

"use strict";


  // If you're making changes to this file, be sure to re-compile afterward
  // using the instructions in `snippet-body-parser.js`.

  function makeInteger(i) {
    return parseInt(i.join(''), 10);
  }

  function coalesce (parts) {
    const result = [];
    for (let i = 0; i < parts.length; i++) {
      const part = parts[i];
      const ri = result.length - 1;
      if (typeof part === 'string' && typeof result[ri] === 'string') {
        result[ri] = result[ri] + part;
      } else {
        result.push(part);
      }
    }
    return result;
  }

  function unwrap (val) {
    let shouldUnwrap = Array.isArray(val) && val.length === 1 && typeof val[0] === 'string';
    return shouldUnwrap ? val[0] : val;
  }


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    bodyContent: peg$parsebodyContent,
  };
  let peg$startRuleFunction = peg$parsebodyContent;

  const peg$c0 = "$";
  const peg$c1 = "${";
  const peg$c2 = "}";
  const peg$c3 = ":";
  const peg$c4 = "|";
  const peg$c5 = "|}";
  const peg$c6 = ",";
  const peg$c7 = "/";
  const peg$c8 = ":+";
  const peg$c9 = "(?";
  const peg$c10 = ")";
  const peg$c11 = ":-";
  const peg$c12 = ":?";
  const peg$c13 = "\\";
  const peg$c14 = ":/";

  const peg$r0 = /^[^|,]/;
  const peg$r1 = /^[^}]/;
  const peg$r2 = /^[^\/]/;
  const peg$r3 = /^[ULulErn]/;
  const peg$r4 = /^[a-zA-Z]/;
  const peg$r5 = /^[a-zA-Z_]/;
  const peg$r6 = /^[a-zA-Z_0-9]/;
  const peg$r7 = /^[a-z]/;
  const peg$r8 = /^[0-9]/;
  const peg$r9 = /^[^:]/;
  const peg$r10 = /^[^:)]/;
  const peg$r11 = /^[^)]/;

  const peg$e0 = peg$literalExpectation("$", false);
  const peg$e1 = peg$literalExpectation("${", false);
  const peg$e2 = peg$literalExpectation("}", false);
  const peg$e3 = peg$literalExpectation(":", false);
  const peg$e4 = peg$literalExpectation("|", false);
  const peg$e5 = peg$literalExpectation("|}", false);
  const peg$e6 = peg$literalExpectation(",", false);
  const peg$e7 = peg$classExpectation(["|", ","], true, false, false);
  const peg$e8 = peg$classExpectation(["}"], true, false, false);
  const peg$e9 = peg$literalExpectation("/", false);
  const peg$e10 = peg$classExpectation(["/"], true, false, false);
  const peg$e11 = peg$literalExpectation(":+", false);
  const peg$e12 = peg$literalExpectation("(?", false);
  const peg$e13 = peg$literalExpectation(")", false);
  const peg$e14 = peg$literalExpectation(":-", false);
  const peg$e15 = peg$literalExpectation(":?", false);
  const peg$e16 = peg$literalExpectation("\\", false);
  const peg$e17 = peg$classExpectation(["U", "L", "u", "l", "E", "r", "n"], false, false, false);
  const peg$e18 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false, false);
  const peg$e19 = peg$literalExpectation(":/", false);
  const peg$e20 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false, false);
  const peg$e21 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false, false);
  const peg$e22 = peg$classExpectation([["a", "z"]], false, false, false);
  const peg$e23 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e24 = peg$anyExpectation();
  const peg$e25 = peg$classExpectation([":"], true, false, false);
  const peg$e26 = peg$classExpectation([":", ")"], true, false, false);
  const peg$e27 = peg$classExpectation([")"], true, false, false);

  function peg$f0(content) {    return content;  }
  function peg$f1(content) {    return content;  }
  function peg$f2(index) {
  return {index: makeInteger(index), content: []}
  }
  function peg$f3(index) {
  return {index: makeInteger(index), content: []}
  }
  function peg$f4(index, content) {
  return {index: makeInteger(index), content: content}
  }
  function peg$f5(index, substitution) {
  return {
    index: makeInteger(index),
    content: [],
    substitution: substitution
  }
  }
  function peg$f6(index, choice) {
  // Choice syntax requires an autocompleter to offer the user the options. As
  // a fallback, we can take the first option and treat it as a placeholder.
  const content = choice.length > 0 ? [choice[0]] : []
  return {index: makeInteger(index), choice: choice, content: content}
  }
  function peg$f7(elem, val) {    return val  }
  function peg$f8(elem, rest) {
  return [elem, ...rest]
  }
  function peg$f9(barred) {    return barred.join('')  }
  function peg$f10(choicetext) {
  return choicetext.join('')
  }
  function peg$f11(regex, replace, flags) {
  return {find: new RegExp(regex, flags), replace: replace}
  }
  function peg$f12(regex) {
  return regex.join('')
  }
  function peg$f13(index) {
  return {backreference: makeInteger(index)}
  }
  function peg$f14(index) {
  return {backreference: makeInteger(index)}
  }
  function peg$f15(index, caseTransform) {
  return {backreference: makeInteger(index), transform: caseTransform}
  }
  function peg$f16(index, iftext) {
  return {backreference: makeInteger(index), iftext: unwrap(iftext), elsetext: ''}
  }
  function peg$f17(index, iftext) {
  return {backreference: makeInteger(index), iftext: unwrap(iftext), elsetext: '' }
  }
  function peg$f18(index, elsetext) {
  return {backreference: makeInteger(index), iftext: '', elsetext: unwrap(elsetext)}
  }
  function peg$f19(index, iftext, elsetext) {
  return {backreference: makeInteger(index), iftext: iftext, elsetext: elsetext}
  }
  function peg$f20(index, iftext, elsetext) {
  return {backreference: makeInteger(index), iftext: iftext, elsetext: elsetext}
  }
  function peg$f21(flag) {
  return {escape: flag}
  }
  function peg$f22(type) {
  return type.join('')
  }
  function peg$f23(char) {    return char  }
  function peg$f24(char) {    return char  }
  function peg$f25(replacetext) {
  return replacetext.join('')
  }
  function peg$f26(name) {
  return {variable: name}
  }
  function peg$f27(name) {
  return {variable: name}
  }
  function peg$f28(name, content) {
  return {variable: name, content: content}
  }
  function peg$f29(name, substitution) {
  return {variable: name, substitution: substitution}
  }
  function peg$f30(name, substitutionFlag) {
  return {variable: name, substitution: {flag: substitutionFlag}}
  }
  function peg$f31(first, rest) {
  return first + rest.join('')
  }
  function peg$f32(chars) {
  return chars.join('')
  }
  function peg$f33(char) {
  switch (char) {
    case '$':
    case '\\':
    case ':':
    case '\x7D': // back brace; PEGjs would treat it as the JS scope end though
      return char
    default:
      return '\\' + char
  }
  }
  function peg$f34(char) {
  switch (char) {
    case '$':
    case '\\':
    case '\x7D':
    case '|':
    case ',':
      return char
    default:
      return '\\' + char
  }
  }
  function peg$f35(flags) {
  return flags.join('')
  }
  function peg$f36(char) {    return char  }
  function peg$f37(text) {
  return text.join('')
  }
  function peg$f38(char) {    return char  }
  function peg$f39(text) {
  return text.join('')
  }
  function peg$f40(char) {    return char  }
  function peg$f41(text) {
  return text.join('')
  }
  function peg$f42(char) {    return char  }
  function peg$f43(text) {
  return text.join('')
  }
  function peg$f44(char) {    return char  }
  function peg$f45(text) {
    return coalesce(text);
  }
  function peg$f46(char) {    return char  }
  function peg$f47(text) {
  return coalesce(text);
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsebodyContent() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsetabstop();
    if (s2 === peg$FAILED) {
      s2 = peg$parsechoice();
      if (s2 === peg$FAILED) {
        s2 = peg$parsevariable();
        if (s2 === peg$FAILED) {
          s2 = peg$parsetext();
        }
      }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsetabstop();
      if (s2 === peg$FAILED) {
        s2 = peg$parsechoice();
        if (s2 === peg$FAILED) {
          s2 = peg$parsevariable();
          if (s2 === peg$FAILED) {
            s2 = peg$parsetext();
          }
        }
      }
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseinnerBodyContent() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsetabstop();
    if (s2 === peg$FAILED) {
      s2 = peg$parsechoice();
      if (s2 === peg$FAILED) {
        s2 = peg$parsevariable();
        if (s2 === peg$FAILED) {
          s2 = peg$parsenonCloseBraceText();
        }
      }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsetabstop();
      if (s2 === peg$FAILED) {
        s2 = peg$parsechoice();
        if (s2 === peg$FAILED) {
          s2 = peg$parsevariable();
          if (s2 === peg$FAILED) {
            s2 = peg$parsenonCloseBraceText();
          }
        }
      }
    }
    peg$savedPos = s0;
    s1 = peg$f1(s1);
    s0 = s1;

    return s0;
  }

  function peg$parsetabstop() {
    let s0;

    s0 = peg$parsesimpleTabstop();
    if (s0 === peg$FAILED) {
      s0 = peg$parsetabstopWithoutPlaceholder();
      if (s0 === peg$FAILED) {
        s0 = peg$parsetabstopWithPlaceholder();
        if (s0 === peg$FAILED) {
          s0 = peg$parsetabstopWithTransform();
        }
      }
    }

    return s0;
  }

  function peg$parsesimpleTabstop() {
    let s0, s1, s2;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 36) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseint();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f2(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetabstopWithoutPlaceholder() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseint();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 125) {
          s3 = peg$c2;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f3(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetabstopWithPlaceholder() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseint();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s3 = peg$c3;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseinnerBodyContent();
          if (input.charCodeAt(peg$currPos) === 125) {
            s5 = peg$c2;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f4(s2, s4);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetabstopWithTransform() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseint();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsetransform();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 125) {
            s4 = peg$c2;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f5(s2, s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsechoice() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseint();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 124) {
          s3 = peg$c4;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsechoicecontents();
          if (s4 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c5) {
              s5 = peg$c5;
              peg$currPos += 2;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e5); }
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f6(s2, s4);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsechoicecontents() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsechoicetext();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 44) {
        s4 = peg$c6;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parsechoicetext();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s3 = peg$f7(s1, s5);
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 44) {
          s4 = peg$c6;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parsechoicetext();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s3 = peg$f7(s1, s5);
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f8(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsechoicetext() {
    let s0, s1, s2, s3, s4, s5, s6;
